--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ File: index.html
 Created Date: Tuesday January 21st 2025 01:54:04
 Author: ristoxxx@github.com
 -----
-Last Modified: Tuesday January 21st 2025 02:49:38
+Last Modified: Tuesday January 21st 2025 11:59:23
 Modified By: ristoxxx@github.com
 -----
 Copyright (c) 2025 ristoxxx@github.com
@@ -14,7 +14,7 @@ Copyright (c) 2025 ristoxxx@github.com
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Trump timer</title>
   </head>
   <body>
     <style>
@@ -106,7 +106,7 @@ Copyright (c) 2025 ristoxxx@github.com
         </div>
       </div> 
     </div>
-    <h1 class="tick-label" style="text-align: center; font-size: 5em;">Until Trump leaves white house</h1>
+    <h1 class="tick-label" style="text-align: center; font-size: 5em;">Until Trump leaves The White House</h1>
    
     <div class="tick-onended-message" style="display: none">
       <p>Time's up</p>
